--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -10,7 +10,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Index &mdash; Hyperspy 0.3.beta3-dev documentation</title>
+    <title>Index &mdash; Hyperspy 0.4 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -18,7 +18,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.beta3-dev',
+        VERSION:     '0.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -29,7 +29,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="index.html" /> 
+    <link rel="top" title="Hyperspy 0.4 documentation" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -44,7 +44,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -4434,7 +4434,7 @@
         <li class="right" >
           <a href="np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
+        <li><a href="index.html">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
