--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Welcome to Hyperspy’s documentation! &mdash; Hyperspy 0.3.beta3-dev documentation</title>
+    <title>Welcome to Hyperspy’s documentation! &mdash; Hyperspy 0.4 documentation</title>
     
     <link rel="stylesheet" href="_static/default.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '',
-        VERSION:     '0.3.beta3-dev',
+        VERSION:     '0.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="shortcut icon" href="_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="#" />
+    <link rel="top" title="Hyperspy 0.4 documentation" href="#" />
     <link rel="next" title="Hyperspy User Guide (DRAFT)" href="user_guide/index.html" /> 
   </head>
   <body>
@@ -46,7 +46,7 @@
         <li class="right" >
           <a href="user_guide/index.html" title="Hyperspy User Guide (DRAFT)"
              accesskey="N">next</a> |</li>
-        <li><a href="#">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
+        <li><a href="#">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -201,7 +201,7 @@
         <li class="right" >
           <a href="user_guide/index.html" title="Hyperspy User Guide (DRAFT)"
              >next</a> |</li>
-        <li><a href="#">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li> 
+        <li><a href="#">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
