--- a/dev/user_guide/io.html
+++ b/dev/user_guide/io.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Loading and saving data &mdash; Hyperspy 0.3.beta3-dev documentation</title>
+    <title>Loading and saving data &mdash; Hyperspy 0.4 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.beta3-dev',
+        VERSION:     '0.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,9 +27,9 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.beta3-dev documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
-    <link rel="next" title="Machine learning" href="mva.html" />
+    <link rel="next" title="Tools" href="tools.html" />
     <link rel="prev" title="Getting started" href="getting_started.html" /> 
   </head>
   <body>
@@ -46,12 +46,12 @@
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="mva.html" title="Machine learning"
+          <a href="tools.html" title="Tools"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="getting_started.html" title="Getting started"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -357,8 +357,8 @@ provide this file to the load function:</p>
   <p class="topless"><a href="getting_started.html"
                         title="previous chapter">Getting started</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="mva.html"
-                        title="next chapter">Machine learning</a></p>
+  <p class="topless"><a href="tools.html"
+                        title="next chapter">Tools</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/user_guide/io.txt"
@@ -394,12 +394,12 @@ provide this file to the load function:</p>
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="mva.html" title="Machine learning"
+          <a href="tools.html" title="Tools"
              >next</a> |</li>
         <li class="right" >
           <a href="getting_started.html" title="Getting started"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.beta3-dev documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
