--- a/current/user_guide/index.html
+++ b/current/user_guide/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Hyperspy User Guide (DRAFT) &mdash; Hyperspy 0.3.0beta2.1 documentation</title>
+    <title>Hyperspy User Guide (DRAFT) &mdash; Hyperspy 0.4 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.3.0beta2.1',
+        VERSION:     '0.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.3.0beta2.1 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.4 documentation" href="../index.html" />
     <link rel="next" title="Introduction" href="intro.html" />
     <link rel="prev" title="Welcome to Hyperspy’s documentation!" href="../index.html" /> 
   </head>
@@ -50,7 +50,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to Hyperspy’s documentation!"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -190,7 +190,7 @@
         <li class="right" >
           <a href="../index.html" title="Welcome to Hyperspy’s documentation!"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.3.0beta2.1 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">Hyperspy 0.4 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
