--- a/dev/user_guide/examples/index.html
+++ b/dev/user_guide/examples/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Hyperspy Examples &mdash; Hyperspy 0.4.1 documentation</title>
+    <title>Hyperspy Examples &mdash; Hyperspy 0.4.1+git122-g14fd548 documentation</title>
     
     <link rel="stylesheet" href="../../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '0.4.1',
+        VERSION:     '0.4.1+git122-g14fd548',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="../../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.4.1 documentation" href="../../index.html" /> 
+    <link rel="top" title="Hyperspy 0.4.1+git122-g14fd548 documentation" href="../../index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -42,7 +42,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.4.1 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.4.1+git122-g14fd548 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -57,9 +57,9 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.4.1</td>
+<tr class="field-odd field"><th class="field-name">Release:</th><td class="field-body">0.4.1+git122-g14fd548</td>
 </tr>
-<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">June 11, 2012</td>
+<tr class="field-even field"><th class="field-name">Date:</th><td class="field-body">August 31, 2012</td>
 </tr>
 </tbody>
 </table>
@@ -112,7 +112,7 @@
         <li class="right" >
           <a href="../../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">Hyperspy 0.4.1 documentation</a> &raquo;</li> 
+        <li><a href="../../index.html">Hyperspy 0.4.1+git122-g14fd548 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
