--- a/dev/user_guide/intro.html
+++ b/dev/user_guide/intro.html
@@ -8,7 +8,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Introduction &mdash; Hyperspy 0.4.1+git122-g14fd548 documentation</title>
+    <title>Introduction &mdash; Hyperspy 0.5 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.4.1+git122-g14fd548',
+        VERSION:     '0.5',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -27,10 +27,25 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="Hyperspy 0.4.1+git122-g14fd548 documentation" href="../index.html" />
+    <link rel="top" title="Hyperspy 0.5 documentation" href="../index.html" />
     <link rel="up" title="Hyperspy User Guide (DRAFT)" href="index.html" />
     <link rel="next" title="What’s new" href="what_is_new.html" />
-    <link rel="prev" title="Hyperspy User Guide (DRAFT)" href="index.html" /> 
+    <link rel="prev" title="Hyperspy User Guide (DRAFT)" href="index.html" />
+ 
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25260850-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
   </head>
   <body>
     <div class="related">
@@ -51,7 +66,7 @@
         <li class="right" >
           <a href="index.html" title="Hyperspy User Guide (DRAFT)"
              accesskey="P">previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4.1+git122-g14fd548 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.5 documentation</a> &raquo;</li>
           <li><a href="index.html" accesskey="U">Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>  
@@ -164,13 +179,13 @@
         <li class="right" >
           <a href="index.html" title="Hyperspy User Guide (DRAFT)"
              >previous</a> |</li>
-        <li><a href="../index.html">Hyperspy 0.4.1+git122-g14fd548 documentation</a> &raquo;</li>
+        <li><a href="../index.html">Hyperspy 0.5 documentation</a> &raquo;</li>
           <li><a href="index.html" >Hyperspy User Guide (DRAFT)</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2.
+      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
 </html>
